--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Courgette|Pacifico" rel="stylesheet">
     <!-- My CSS -->
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+     <!-- Favicon Link-->
+     <link rel="shortcut icon" href="pawPrint.jpg" type="image/x-icon"> 
 
     
 </head>
