--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Black(Lab)Jack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Normalize CSS -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css"
+          integrity="sha256-uHu2MAd1LvCOVEAhvMld4LpJi7dUGS7GVzvG/5B3hlo=" crossorigin="anonymous"/> -->
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Courgette|Pacifico" rel="stylesheet">
     <!-- My CSS -->
